Closed Bug 1307252 Opened 8 years ago Closed 8 years ago

Touch caret is shown when touch-keyboard or external keyboard is used

Categories

(Core :: DOM: Selection, defect)

All
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: Abe_LV, Assigned: TYLin)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Attached image caret.png
Created attachment 8788654 [details]
textselection.mp4

[Tested Platform] 
Asus laptop (touch enabled)

Version  52.0a1
Build ID  20161003055855
Update Channel  default
User Agent  Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:52.0) Gecko/20100101 Firefox/52.0

[Pre-Requisites] 
about:config settings:
javascript.options.asyncstack; false
browser.tabs.remote.force-enable; true
layers.async-pan-zoom.enabled; true 

about:support info
Multiprocess Windows 1/1 (Enabled by user)
about:support Asynchronous Pan/Zoom wheel input enabled; touch input enabled

Steps to Reproduce

1.Go to: https://en.wikipedia.org/wiki/Main_Page
2.Select all using “Ctrl +A” from touch-keyboard or external keyboard

Actual Result

Touch caret is shown at the top-left side of the page.

Expected Result

Touch caret should not be shown when touch-keyboard or external keyboard is used.
Flags: needinfo?(bugmail)
We'll need to hide carets for nsISelectionListener::SELECTALL_REASON.
Assignee: nobody → tlin
Status: NEW → ASSIGNED
Comment on attachment 8797940 [details]
Bug 1307252 - Hide the carets when the selection is made by select all.

https://reviewboard.mozilla.org/r/83524/#review82180
Attachment #8797940 - Flags: review?(bugmail) → review+
There's a test_browserElement_inproc_CopyPaste that's failing on your try push, looks related. Maybe the test is waiting for mozbrowsercaretstatechanged [1] and doesn't get it?

[1] http://searchfox.org/mozilla-central/rev/8071f94c4d4b66833ad08db39565669faad94dfd/dom/browser-element/mochitest/browserElement_CopyPaste.js#193
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #5)
> There's a test_browserElement_inproc_CopyPaste that's failing on your try
> push, looks related. Maybe the test is waiting for
> mozbrowsercaretstatechanged [1] and doesn't get it?

Yes. I think so. We'll need to disable "layout.accessiblecaret.hide_carets_for_mouse_input" for the mochitest.
Latest try result with "layout.accessiblecaret.hide_carets_for_mouse_input" disabled.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=0fda7e49f3dd&selectedJob=28665662
Comment on attachment 8797940 [details]
Bug 1307252 - Hide the carets when the selection is made by select all.

https://reviewboard.mozilla.org/r/83524/#review82400
Attachment #8797940 - Flags: review?(kchen) → review+
Pushed by tlin@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/326481b79649
Hide the carets when the selection is made by select all. r=kanru,kats
https://hg.mozilla.org/mozilla-central/rev/326481b79649
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Verified as fixed in the latest nightly. Touch caret is hidden for selection made by select all (Ctrl +A).

--
Version  52.0a1
Build ID  20161007030207
Update Channel  nightly
User Agent  Mozilla/5.0 (Windows NT 10.0; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Depends on: 1339797
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: